# ROCK-BUTTOM

./: .env.example  .gitignore  Cargo.toml  README.md  commitlint.config.js  package.json
.github/workflows/: ci.yml
apps/backend/: .env.example  jest-e2e.config.js  jest-integration.config.js  package.json  tsconfig.build.json
apps/backend/src/: app.module.ts  data-source.ts  instrument.ts  main.ts
apps/backend/src/access-control/: access-control.controller.ts  access-control.module.ts  access-control.service.ts  access-log.entity.ts  course-access-control.entity.ts
apps/backend/src/analytics/: analytics-event.entity.ts  analytics.controller.ts  analytics.module.ts  analytics.service.ts  course-analytics.entity.ts  events.service.ts  platform-analytics.controller.ts  platform-analytics.entity.ts  platform-analytics.service.ts
apps/backend/src/api-usage/: api-usage-log.entity.ts  api-usage.controller.ts  api-usage.interceptor.ts  api-usage.module.ts  api-usage.service.ts
apps/backend/src/audit/: audit-log.entity.ts  audit-subscriber.ts  audit.controller.ts  audit.interceptor.ts  audit.module.ts  (+1 more)
apps/backend/test/: app.e2e-spec.ts  chaos-engineering.spec.ts  pact.provider.spec.ts  sanitization.e2e-spec.ts  test-data.manager.ts
apps/backend/tests/: test-data.seeder.ts
apps/web/: .env.development  .env.example  .env.production  .env.staging  Dockerfile  eslint.config.js  jest.config.ts  next.config.ts  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/messages/: ar.json  en.json  es.json  fr.json  he.json
apps/web/public/: robots.txt
contracts/analytics/: Cargo.toml
contracts/analytics/src/: fuzz_tests.rs  lib.rs  tests.rs
contracts/badges/: Cargo.toml
contracts/badges/src/: lib.rs
contracts/benchmarks/: Cargo.toml
contracts/benchmarks/benches/: contract_benchmarks.rs
contracts/buyback/: Cargo.toml
contracts/buyback/src/: lib.rs  tests.rs
contracts/certificate/: Cargo.toml
contracts/certificate/src/: fuzz_tests.rs  lib.rs
contracts/credential_metadata/: Cargo.toml
contracts/credential_metadata/src/: lib.rs  tests.rs
contracts/crowdfund/: Cargo.toml  OPTIMIZATIONS.md
contracts/crowdfund/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs  validation.rs
contracts/crowdfund/test_snapshots/: fuzz_concurrent_contributions_succeed.1.json  fuzz_concurrent_contributions_succeed.10.json  fuzz_concurrent_contributions_succeed.100.json  fuzz_concurrent_contributions_succeed.101.json  fuzz_concurrent_contributions_succeed.102.json  fuzz_concurrent_contributions_succeed.103.json  fuzz_concurrent_contributions_succeed.104.json  fuzz_concurrent_contributions_succeed.105.json  fuzz_concurrent_contributions_succeed.106.json  fuzz_concurrent_contributions_succeed.107.json  fuzz_concurrent_contributions_succeed.108.json  fuzz_concurrent_contributions_succeed.109.json  fuzz_concurrent_contributions_succeed.11.json  fuzz_concurrent_contributions_succeed.110.json  fuzz_concurrent_contributions_succeed.111.json  fuzz_concurrent_contributions_succeed.112.json  fuzz_concurrent_contributions_succeed.113.json  fuzz_concurrent_contributions_succeed.114.json  fuzz_concurrent_contributions_succeed.115.json  fuzz_concurrent_contributions_succeed.116.json  fuzz_concurrent_contributions_succeed.117.json  fuzz_concurrent_contributions_succeed.118.json  fuzz_concurrent_contributions_succeed.119.json  fuzz_concurrent_contributions_succeed.12.json  fuzz_concurrent_contributions_succeed.120.json  fuzz_concurrent_contributions_succeed.121.json  fuzz_concurrent_contributions_succeed.122.json  fuzz_concurrent_contributions_succeed.123.json  fuzz_concurrent_contributions_succeed.124.json  fuzz_concurrent_contributions_succeed.125.json  fuzz_concurrent_contributions_succeed.126.json  fuzz_concurrent_contributions_succeed.127.json  fuzz_concurrent_contributions_succeed.128.json  fuzz_concurrent_contributions_succeed.129.json  fuzz_concurrent_contributions_succeed.13.json  fuzz_concurrent_contributions_succeed.130.json  fuzz_concurrent_contributions_succeed.131.json  fuzz_concurrent_contributions_succeed.132.json  fuzz_concurrent_contributions_succeed.133.json  fuzz_concurrent_contributions_succeed.134.json  (+1550 more)
contracts/crowdfund/tests/: fuzz_tests.proptest-regressions  fuzz_tests.rs  upgrade_tests.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs  voting.rs
contracts/grants/: Cargo.toml
contracts/grants/src/: lib.rs
contracts/liquidity_pool/: Cargo.toml
contracts/liquidity_pool/src/: lib.rs  tests.rs
contracts/nft/: Cargo.toml
contracts/nft/src/: lib.rs  tests.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  tests.rs
contracts/royalty_distribution/: Cargo.toml
contracts/royalty_distribution/src/: lib.rs  tests.rs
contracts/scholarship_fund/: Cargo.toml
contracts/scholarship_fund/src/: lib.rs  tests.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: errors.rs  lib.rs  multisig.rs  pausable.rs  reentrancy.rs  tests.rs  upgrade.rs  validation.rs
contracts/token/: Cargo.toml
contracts/token/src/: airdrop.rs  fuzz_tests.rs  fuzzing.rs  lib.rs  security_tests.rs  staking.rs  tests.rs
contracts/token_restrictions/: Cargo.toml
contracts/token_restrictions/src/: lib.rs  tests.rs
docs/: CROWDFUND_REMEDIATION.md  MERGE_PLAN.md  TEST_MIGRATION_NOTES.md
(+452 files in other folders)
