[workspace]
resolver = "2"
members = ["contracts/*"]
exclude = ["contracts/benchmarks"]

[workspace.dependencies]
# Standardized Soroban SDK for the whole platform (was 21.x in Brain-Storm).
soroban-sdk = "25.3.0"
insta = { version = "1.37", features = ["redactions"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
