[workspace]
resolver = "2"
members = ["contracts/*"]
# `benchmarks` is a bench harness, not a deployable contract.
# `crowdfund` is quarantined: it is incomplete in the Fund-My-Cause source
# (references undefined types + removed SDK APIs). See docs/CROWDFUND_REMEDIATION.md.
exclude = ["contracts/benchmarks", "contracts/crowdfund"]

[workspace.dependencies]
# Standardized Soroban SDK for the whole platform (was 21.x in Brain-Storm).
soroban-sdk = "25.3.0"
insta = { version = "1.37", features = ["redactions"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
