[package]
name = "brain-storm-grants"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "21.7"

[dev-dependencies]
soroban-sdk = { version = "21.7", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
