[package]
name = "registry"
version = "0.1.0"
edition = "2021"
publish = false
description = "Rock-Buttom registry contract — on-chain campaign discovery for the Stellar/Soroban network"
documentation = "https://rock-buttom.github.io/Rock-Buttom/registry"
readme = "../../README.md"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg", "docsrs",
  "--default-theme=ayu",
]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
insta = { workspace = true }
