[package]
name = "royalty_distribution"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "21.5.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "21.5.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
